new changes in admin

--- a/web_admin/templates/web_adminbase.html
+++ b/web_admin/templates/web_adminbase.html
@@ -149,11 +149,17 @@
     <!-- Sidebar -->
     <div id="sidebar">
       <header>
-        <a href="#">request.session.name</a>
+        <a href="#">{{request.session.name}}</a>
       </header>
       <ul class="nav">
         <li>
           <a href="/web_admin/add-product"><i class="fa-solid fa-table"></i>Add Product</a>
+        </li>
+        <li>
+          <a href="/web_admin/all-users"><i class="fa-solid fa-table"></i>All Users</a>
+        </li>
+        <li>
+          <a href="/web_admin/add-questions"><i class="fa-solid fa-table"></i>All Questions</a>
         </li>
       </ul>
     </div>
