--- a/web_admin/templates/add_question.html
+++ b/web_admin/templates/add_question.html
@@ -8,47 +8,54 @@
 <div class="m-4">
   <div class="card me-6 p-2" style="width: auto">
     <h4 class="m-0 p-0">
-      Add Product
+      Add Question
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <form
-      action="/web_admin/add-product"
+      action="/web_admin/add-questions"
       method="post"
       enctype="multipart/form-data"
     >
       {% csrf_token %}
+      <marquee class="text-warning m-2 font-weight-bold"> Add choice in sequence of decrement in which efficiency of anything is on top</marquee>
       <div class="form-group row mt-2">
-        <label for="" class="col-sm-2 form-control-label">Product Name</label>
+        <label for="" class="col-sm-2 form-control-label">Question </label>
         <div class="col-sm-10">
-          <input type="text" name="name" id="alias-textbox" class="form-control" />
+          <input type="text" name="question" id="alias-textbox" class="form-control" />
         </div>
       </div>
       <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Description</label>
+        <label for="" class="col-sm-2 form-control-label">Choice 1 : </label>
         <div class="col-sm-10">
-          <input type="text" name="description" id="alias-textbox" class="form-control" />
+          <input type="text" name="choice_1" id="alias-textbox" class="form-control" />
         </div>
       </div>
       <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Amount</label>
+        <label for="" class="col-sm-2 form-control-label">Choice 2 : </label>
         <div class="col-sm-10">
-          <input type="number" name="amount" id="alias-textbox" class="form-control" />
+          <input type="text" name="choice_2" id="alias-textbox" class="form-control" />
         </div>
       </div>
       <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Product Image</label>
+        <label for="" class="col-sm-2 form-control-label">Choice 3 : </label>
         <div class="col-sm-10">
-          <input type="file" name="image" accept="image/*" class="form-control" />
+          <input type="text" name="choice_3" id="alias-textbox" class="form-control" />
+        </div>
+      </div>
+      <div class="form-group row mt-3">
+        <label for="" class="col-sm-2 form-control-label">Choice 4 : </label>
+        <div class="col-sm-10">
+          <input type="text" name="choice_4" id="alias-textbox" class="form-control" />
         </div>
       </div>
       <div class="d-flex justify-content-center mt-2">
         <button type="submit" class="btn btn-primary pe-4 ps-4 m-2">
-          Add Product
+          Add Question
         </button>
       </div>
     </form>
     <h4 class="mt-4 p-0">
-      All Product List
+      All Question List
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <table
@@ -60,9 +67,10 @@
         <tr class="pt-7 pb-7"></tr>
         <tr class="p-3 text-center">
           <th>S.No.</th>
-          <th>Product Name</th>
-          <th>Product Description</th>
-          <th>Product Image</th>
+          <th>Question Title</th>
+          <th>Created at</th>
+          <th>Last Updated at.</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -70,8 +78,9 @@
         <tr>
           <td>{{forloop.counter}}</td>
           <td>{{obj.name}}</td>
-          <td>{{obj.description}}</td>
-          <td><a class="btn btn-warning text-white" href="{{obj.image.url}}">View Image</a></td>
+          <td>{{obj.created_at|date}}</td>
+          <td>{{obj.updated_at|date}}</td>
+          <td><a class="btn btn-warning text-white" href="/web_admin/edit-question/{{obj.id}}">Edit Choice</a></td>
         </tr>
         {% endfor %}
       </tbody>
