--- a/web_admin/templates/all_users_list.html
+++ b/web_admin/templates/all_users_list.html
@@ -8,7 +8,7 @@
 <div class="m-4">
   <div class="card me-6 p-2" style="width: auto">
     <h4 class="mt-4 p-0">
-      All Product List
+      All User List
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <table
