--- a/web_admin/templates/edit_question.html
+++ b/web_admin/templates/edit_question.html
@@ -36,11 +36,9 @@
         <button type="submit" class="btn btn-primary pe-4 ps-4 m-2">
           Update
         </button>
-        <form action="/web_admin/edit-question/{{question.id}}" method="delete">
-        <button type="submit" class="btn btn-danger pe-4 ps-4 m-2">
+        <a href="/web_admin/delete-question/{{question.id}}"type="submit" class="btn btn-danger pe-4 ps-4 m-2">
             Delete
-        </button>
-        </form>
+        </a>
       </div>
     </form>
 </div>
