changes of register login

--- a/web_admin/templates/web_adminbase.html
+++ b/web_admin/templates/web_adminbase.html
@@ -153,16 +153,22 @@
       </header>
       <ul class="nav">
         <li>
-          <a href="/web_admin/add-product"><i class="fa-solid fa-table"></i>Add Product</a>
+          <a href="/web_admin/add-product"><i class="fa-solid fa-table"></i>Add Product Details</a>
         </li>
         <li>
-          <a href="/web_admin/all-users"><i class="fa-solid fa-table"></i>All Users</a>
+          <a href="/web_admin/all-users"><i class="fa-solid fa-table"></i>All Users Details</a>
         </li>
         <li>
-          <a href="/web_admin/add-package"><i class="fa-solid fa-table"></i>Add Packages</a>
+          <a href="/web_admin/add-package"><i class="fa-solid fa-table"></i>Add Packages Details</a>
         </li>
         <li>
           <a href="/web_admin/add-questions"><i class="fa-solid fa-table"></i>Diagonise Questions</a>
+        </li>
+        <li>
+          <a href="/web_admin/add-category"><i class="fa-solid fa-table"></i>Add new Category</a>
+        </li>
+        <li>
+          <a href="/web_admin/add-diet-plan"><i class="fa-solid fa-table"></i>Add Diet-Plans</a>
         </li>
         <li>
           <a href="/web_admin/logout"><i class="fa-solid fa-table"></i>Logout</a>
