--- a/user/templates/user_base.html
+++ b/user/templates/user_base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -6,9 +7,17 @@
 <title>Bootstrap Navbar with Logo Image</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <style>
     .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link {
         color: white;
+    }
+    .cart-count {
+        color: white;
+    }
+    
+    .bg-danger {
+        background-color: red !important;
     }
 </style>
 </head>
@@ -23,16 +32,26 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav mx-auto">
-                        <a href="/user/dashboard" class="nav-item nav-link">Dashboard</a>
-                        <a href="#" class="nav-item nav-link">Report</a>
-                        <a href="/user/product" class="nav-item nav-link">Products</a>
-                        <a href="/user/add-to-cart" class="nav-item nav-link">Cart</a>
-                    </div>
-                    <div class="navbar-nav ms-auto">
-                        <a href="/user/logout" class="nav-item nav-link">Logout</a>
-                    </div>
-                </div>            
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item"><a href="/user/dashboard" class="nav-link">Dashboard</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Report</a></li>
+                        <li class="nav-item"><a href="/user/product" class="nav-link">Products</a></li>
+                        <li class="nav-item">
+                            <a href="/user/add-to-cart" class="nav-link">
+                                <div class="position-relative">
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                        <span class="visually-hidden">Cart items:</span>
+                                        <span class="cart-count">{{cart_count}}</span>
+                                    </span>
+                                    Cart
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a href="/user/logout" class="nav-link">Logout</a></li>
+                    </ul>
+                </div>                           
             </div>
         </nav>
     </div>
