--- a/web_admin/templates/add_category.html
+++ b/web_admin/templates/add_category.html
@@ -9,54 +9,30 @@
 <div class="m-4">
   <div class="card me-6 p-2" style="width: auto">
     <h4 class="m-0 p-0">
-      Add Question
+      Add Category
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <form
-      action="/web_admin/add-questions"
+      action="/web_admin/add-category"
       method="post"
       enctype="multipart/form-data"
     >
       {% csrf_token %}
-      <marquee class="text-warning m-2 font-weight-bold"> Add choice in sequence of decrement in which efficiency of anything is on top</marquee>
+      <marquee class="text-warning m-2 font-weight-bold"> Add Category for efficiency issue </marquee>
       <div class="form-group row mt-2">
-        <label for="" class="col-sm-2 form-control-label">Question </label>
+        <label for="" class="col-sm-2 form-control-label">Category Name </label>
         <div class="col-sm-10">
-          <input type="text" name="question" id="alias-textbox" class="form-control" />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Choice 1 : </label>
-        <div class="col-sm-10">
-          <input type="text" name="choice_1" id="alias-textbox" class="form-control" />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Choice 2 : </label>
-        <div class="col-sm-10">
-          <input type="text" name="choice_2" id="alias-textbox" class="form-control" />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Choice 3 : </label>
-        <div class="col-sm-10">
-          <input type="text" name="choice_3" id="alias-textbox" class="form-control" />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Choice 4 : </label>
-        <div class="col-sm-10">
-          <input type="text" name="choice_4" id="alias-textbox" class="form-control" />
+          <input type="text" name="name" id="alias-textbox" class="form-control" />
         </div>
       </div>
       <div class="d-flex justify-content-center mt-2">
         <button type="submit" class="btn btn-primary pe-4 ps-4 m-2">
-          Add Question
+          Add Category
         </button>
       </div>
     </form>
     <h4 class="mt-4 p-0">
-      All Question List
+      All Category List
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <table
@@ -68,20 +44,18 @@
         <tr class="pt-7 pb-7"></tr>
         <tr class="p-3 text-center">
           <th>S.No.</th>
-          <th>Question Title</th>
+          <th>Category Name</th>
           <th>Created at</th>
-          <th>Last Updated at.</th>
-          <th>Action</th>
+          {% comment %} <th>Action</th> {% endcomment %}
         </tr>
       </thead>
       <tbody>
         {% for obj in list %}
         <tr>
           <td>{{forloop.counter}}</td>
-          <td>{{obj.question}}</td>
+          <td>{{obj.name}}</td>
           <td>{{obj.created_at|date}}</td>
-          <td>{{obj.updated_at|date}}</td>
-          <td><a class="btn btn-warning text-white" href="/web_admin/edit-question/{{obj.id}}">Edit Choice</a></td>
+          {% comment %} <td><a class="btn btn-danger text-white" href="/web_admin/delete-category/{{obj.id}}">Delete Category</a></td> {% endcomment %}
         </tr>
         {% endfor %}
       </tbody>
