--- a/web_admin/templates/add_diet_plan.html
+++ b/web_admin/templates/add_diet_plan.html
@@ -8,17 +8,17 @@
 <div class="m-4">
   <div class="card me-6 p-2" style="width: auto">
     <h4 class="m-0 p-0">
-      Add Product
+      Add Diet-Plan
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <form
-      action="/web_admin/add-product"
+      action="/web_admin/add-diet-plan"
       method="post"
       enctype="multipart/form-data"
     >
       {% csrf_token %}
       <div class="form-group row mt-2">
-        <label for="" class="col-sm-2 form-control-label">Product Name</label>
+        <label for="" class="col-sm-2 form-control-label">Plan Name</label>
         <div class="col-sm-10">
           <input
             type="text"
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Description</label>
+        <label for="" class="col-sm-2 form-control-label">Diet Description</label>
         <div class="col-sm-10">
           <input
             type="text"
@@ -42,31 +42,7 @@
         </div>
       </div>
       <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Amount</label>
-        <div class="col-sm-10">
-          <input
-            type="number"
-            name="amount"
-            id="alias-textbox"
-            class="form-control"
-            required
-          />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Image %</label>
-        <div class="col-sm-10">
-          <input
-            type="file"
-            name="image"
-            accept="image/*"
-            class="form-control"
-            required
-          />
-        </div>
-      </div>
-      <div class="form-group row mt-3">
-        <label for="" class="col-sm-2 form-control-label">Product Category</label>
+        <label for="" class="col-sm-2 form-control-label">Diet Category</label>
         <div class="col-sm-10">
           <select  name="category"
           id="alias-textbox"
@@ -107,14 +83,26 @@
           </div>
         </div>
       </div>
+      <div class="form-group row mt-3 col-sm-6">
+        <label for="" class="col-sm-4 form-control-label">Diet Pdf</label>
+        <div class="col-sm-8">
+            <input name="diet_doc" 
+            type="file"
+            id="alias-textbox"
+            accept="application/pdf" 
+            class="form-control"
+          />
+        </div>
+      </div>
+    </div>
       <div class="d-flex justify-content-center mt-2">
         <button type="submit" class="btn btn-primary pe-4 ps-4 m-2">
-          Add Product
+          Add Diet-Plan
         </button>
       </div>
     </form>
     <h4 class="mt-4 p-0">
-      All Product List
+      All Diet-Plan List
       <hr class="hr p-0 mt-1 me-1" />
     </h4>
     <table
@@ -126,11 +114,11 @@
         <tr class="pt-7 pb-7"></tr>
         <tr class="p-3 text-center">
           <th>S.No.</th>
-          <th>Product Name</th>
-          <th>Product Description</th>
+          <th>Plan Name</th>
+          <th>Diet Description</th>
           <th>Min</th>
           <th>Max</th>
-          <th>Product Image</th>
+          <th>Diet Doc.</th>
         </tr>
       </thead>
       <tbody>
@@ -142,8 +130,8 @@
           <td>{{obj.min}}</td>
           <td>{{obj.max}}</td>
           <td>
-            <a class="btn btn-warning text-white" href="{{obj.image.url}}"
-              >View Image</a
+            <a class="btn btn-warning text-white" href="{{obj.diet_doc.url}}"
+              >View</a
             >
           </td>
         </tr>
