--- a/web_admin/templates/add_question.html
+++ b/web_admin/templates/add_question.html
@@ -48,6 +48,20 @@
           <input type="text" name="choice_4" id="alias-textbox" class="form-control" />
         </div>
       </div>
+      <div class="form-group row mt-3">
+        <label for="" class="col-sm-2 form-control-label">Question Category</label>
+        <div class="col-sm-10">
+          <select  name="category"
+          id="alias-textbox"
+          class="form-control"
+          required>
+          <option  value="" disabled selected hidden>---Select Category---</option>
+          {% for obj in category_list %}
+          <option value={{obj.id}} class="form-select">{{obj.name}}</option>
+          {% endfor %}
+        </select>
+        </div>
+      </div>
       <div class="d-flex justify-content-center mt-2">
         <button type="submit" class="btn btn-primary pe-4 ps-4 m-2">
           Add Question
