--- a/user/templates/register_user.html
+++ b/user/templates/register_user.html
@@ -204,10 +204,12 @@
               </div>
               <input type="hidden" id="hiddenInput" name="is_active" value="True" />
               <input type="hidden" id="hiddenInput" name="role" value="USER" />
+              <b><p> Already have an account ? <a href="/user/">Login</a><p></b>
             </div>
           </div>
         </div>
       </form>
+
     </div>
     <script>
       function displayImage(input) {
