--- a/user/templates/user_base.html
+++ b/user/templates/user_base.html
@@ -34,8 +34,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item"><a href="/user/dashboard" class="nav-link">Dashboard</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Report</a></li>
+                        <li class="nav-item"><a href="/user/report" class="nav-link">Report</a></li>
                         <li class="nav-item"><a href="/user/product" class="nav-link">Products</a></li>
+                        <li class="nav-item"><a href="/user/add-to-order" class="nav-link">Your Order</a></li>
                         <li class="nav-item">
                             <a href="/user/add-to-cart" class="nav-link">
                                 <div class="position-relative">
