--- a/user/templates/product.html
+++ b/user/templates/product.html
@@ -49,7 +49,7 @@
     <p>Price: {{ product.amount }}</p>
     <p>{{ product.description|safe|truncatechars:50 }}..<a class="link">see more</a></p>
     <div class="d-flex">
-      <form action="/user/add-order" method="post">
+      <form action="/user/add-to-order" method="post">
         {% csrf_token %}
         <button
           class="btn-success m-3 text-white p-2"
