changes in new flow

--- a/user/templates/user_base.html
+++ b/user/templates/user_base.html
@@ -56,7 +56,9 @@
             </div>
         </nav>
     </div>
+    <div>
     {% block body %}
     {% endblock body %}
+    </div>
 </body>
 </html>
